--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,39 @@
     <artifactId>InfoXML</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
+    
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-assembly-plugin</artifactId>
+                
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <mainClass>br.inf.infosistemas.interfaces.FormJtable</mainClass>
+                        </manifest>
+                    </archive>
+                    <descriptorRefs>
+                        <descriptorRef>jar-with-dependencies</descriptorRef>
+                    </descriptorRefs>
+                </configuration>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+      
+            
+      
+      
+        </plugins>
+    </build>
+    
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>11</maven.compiler.source>
@@ -14,20 +47,20 @@
     
     
     
- <dependencies>  
-<!-- https://mvnrepository.com/artifact/org.firebirdsql.jdbc/jaybird -->
-<dependency>
-    <groupId>org.firebirdsql.jdbc</groupId>
-    <artifactId>jaybird</artifactId>
-    <version>4.0.0.java11</version>
-</dependency>
+    <dependencies>  
+        <!-- https://mvnrepository.com/artifact/org.firebirdsql.jdbc/jaybird -->
+        <dependency>
+            <groupId>org.firebirdsql.jdbc</groupId>
+            <artifactId>jaybird</artifactId>
+            <version>4.0.0.java11</version>
+        </dependency>
 
-<!-- https://mvnrepository.com/artifact/com.jtattoo/JTattoo -->
-<dependency>
-    <groupId>com.jtattoo</groupId>
-    <artifactId>JTattoo</artifactId>
-    <version>1.6.12</version>
-</dependency>
+        <!-- https://mvnrepository.com/artifact/com.jtattoo/JTattoo -->
+        <dependency>
+            <groupId>com.jtattoo</groupId>
+            <artifactId>JTattoo</artifactId>
+            <version>1.6.12</version>
+        </dependency>
 
 
     </dependencies>
