--- a/pom.xml
+++ b/pom.xml
@@ -48,11 +48,11 @@
     
     
     <dependencies>  
-        <!-- https://mvnrepository.com/artifact/org.firebirdsql.jdbc/jaybird -->
+        <!-- https://mvnrepository.com/artifact/org.firebirdsql.jdbc/jaybird  4.0.0.java8 -->
         <dependency>
             <groupId>org.firebirdsql.jdbc</groupId>
             <artifactId>jaybird</artifactId>
-            <version>4.0.0.java8</version>
+            <version>2.1.6</version>
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/com.jtattoo/JTattoo -->
@@ -62,6 +62,12 @@
             <version>1.6.12</version>
         </dependency>
 
+<!-- https://mvnrepository.com/artifact/log4j/log4j -->
+<dependency>
+    <groupId>log4j</groupId>
+    <artifactId>log4j</artifactId>
+    <version>1.2.17</version>
+</dependency>
 
     </dependencies>
     
